--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- light box -->
-    <link rel="stylesheet" href="../css/lightbox.css">
+    <link rel="stylesheet" href="./css/lightbox.min.css">
     <!-- custome css -->
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/index.css">
@@ -346,7 +346,7 @@
     </section>
     <!-- testtiminal end -->
     <!-- gallery section start  -->
-    <section class="gallery">
+    <section class="gallery_section">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center pb-5">
@@ -360,42 +360,129 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-lg-4 mb-4">
-                    <a href="./assets/gallery/g-3.jpg " data-lightbox="image" data-title="lemon">
-                        <img src="./assets/gallery/g-3.jpg" class="img-fluid rounded-3" alt="">
-
-                    </a>f
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <a href="./assets/gallery/g-4.jpg " data-lightbox="image" data-title="lemon">
-                        <img src="./assets/gallery/g-4.jpg" class="img-fluid rounded-3" alt="">
+                    <a href="assets/images/gallery/g-1.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-1.jpg" class="img-fluid rounded-3" alt="">
 
                     </a>
                 </div>
                 <div class="col-sm-6 col-lg-4 mb-4">
-                    <a href="./assets/gallery/g-5.jpg " data-lightbox="image" data-title="lemon">
-                        <img src="./assets/gallery/g-5.jpg" class="img-fluid rounded-3" alt="">
+                    <a href="assets/images/gallery/g-2.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-2.jpg" class="img-fluid rounded-3" alt="">
 
                     </a>
                 </div>
                 <div class="col-sm-6 col-lg-4 mb-4">
-                    <a href="./assets/gallery/g-6.jpg " data-lightbox="image" data-title="lemon">
-                        <img src="./assets/gallery/g-6.jpg" class="img-fluid rounded-3" alt="">
+                    <a href="assets/images/gallery/g-3.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-3.jpg" class="img-fluid rounded-3" alt="">
 
                     </a>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <a href="assets/images/gallery/g-4.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-4.jpg" class="img-fluid rounded-3" alt="">
+
+                    </a>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <a href="assets/images/gallery/g-5.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-5.jpg" class="img-fluid rounded-3" alt="">
+
+                    </a>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <a href="assets/images/gallery/g-6.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-6.jpg" class="img-fluid rounded-3" alt="">
+
+                    </a>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <a href="assets/images/gallery/g-7.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-7.jpg" class="img-fluid rounded-3" alt="">
+
+                    </a>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <a href="assets/images/gallery/g-8.jpg" data-lightbox="image" data-title="lemon">
+                        <img src="./assets/images/gallery/g-8.jpg" class="img-fluid rounded-3" alt="">
+
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- gallery section end  -->
+    <!-- footer start -->
+    <section class="footer_wrapper mt-3 mb-md-0">
+        <div class="container px-5 px-lg-0">
+            <div class="row">
+                <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+                    <h5>organic master</h5>
+                    <p class="mb-4 ps-0 company-details">
+                        Organic Food is a premier online destination for all things organic, offering a wide range of
+                        natural and sustainably sourced products.....
+                    </p>
+                    <div class="contact-info">
+                        <ul class="list-unstyled">
+                            <li><a href=""><i class="fa fa-home me-3"></i>Boat Basin, Block 5, Clifton, Karachi,
+                                    Pakistan.</a></li>
+                            <li><a href=""><i class="fa fa-phone me-3"></i>+1 333 555 777 </a></li>
+                            <li><a href=""><i class="fa fa-envelope me-3"></i>organic@gmail.com</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+                    <h5>Customer Support</h5>
+                    <ul class="link-widget p-0">
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Privicy poilcy</a></li>
+                        <li><a href="">Term & condition</a></li>
+                        <li><a href="">product Return</a></li>
+                        <li><a href="">wholesale policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+                    <h5>Quick link</h5>
+                    <ul class="link-widget p-0">
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Privicy poilcy</a></li>
+                        <li><a href="">Term & condition</a></li>
+                        <li><a href="">product Return</a></li>
+                        <li><a href="">wholesale policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+                    <h5>newsletter</h5>
+                    <div class="form-group mb-5">
+                        <input type="email" class="form-control bg-transparent" placeholder="enter your email here">
+                        <button type="submit" class="btn main-btn">subscribe</button>
+                    </div>
+                    <h4>Stay connected</h4>
+                    <ul class="social-network d-flex align-items-center p-0">
+                        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                </div>
+                <div class="conatainer-fluid copyright-section">
+                    <p>Copyright <a href="">© Organic Food</a> ALL Right Reserved</p>
                 </div>
             </div>
         </div>
     </section>
 
-
-    <!-- gallery section end  -->
-
+    <!-- footer end -->
 
 
 
 
 
-
+    <!-- j query -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- light box 2 -->
     <script src="../js/lightbox.js"></script>
     <!-- bootstrap -->
