--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <a class="nav-link" href="about.html">about</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Product</a>
+                                <a class="nav-link" href="product.html  ">Product</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="gallery.html">gallery</a>
@@ -469,12 +469,13 @@
                 <div class="conatainer-fluid copyright-section">
                     <p>Copyright <a href="">© Organic Food</a> ALL Right Reserved</p>
                 </div>
+
             </div>
         </div>
     </section>
 
     <!-- footer end -->
-
+<!-- the endgit  -->
 
 
 
