made complete about page and half product page

--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
     <!-- custome css -->
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./css/about.css">
 </head>
 
 
-<body>
+<body class="about">
     <!-- nav bar start -->
     <header id="full_nav">
         <div class="header">
@@ -62,6 +62,7 @@
 
     </header>
     <!-- nav bar  end -->
+    <!-- banner start -->
     <section class="banner_section">
         <div class="container">
             <div class="banner-content">
@@ -69,7 +70,56 @@
             </div>
         </div>
     </section>
+    <!-- banner end -->
+    <!-- about section start -->
+    <section class="about_section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center pb-5">
+                    <h2 class="section-title">
+                        About us
+                    </h2>
+                    <p class="section-subitle">
+                        Welcome to our organic website, where we are passionate about promoting a healthy and sustainable lifestyle.
+                    </p>
+                </div>
+            </div>
+            <div class="row align-items-center py-5">
+                <div class="col-lg-6 col-12 mb-4">
+                    <img src="./assets/about/about-img.jpg" alt="about" class="img-fluid">
+                </div>
+                <div class="col-lg-6 col-12 mb-4">
+                    <div class="about-content">
+                        <div class="about-detail">
+                            <p>We believe in the power of organic products to nourish our bodies and protect the environment. Our mission is to provide you with high-quality organic goods that are ethically sourced and free from harmful chemicals. Join us
+                                in our journey towards a greener and healthier world!"</p>
+                            <p>Feel free to customize and expand upon this to better fit your website's message and values. </p>
 
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center py-5">
+
+                <div class="col-lg-6 col-12 mb-4 order-2 order-lg-1">
+                    <div class="about-content">
+                        <div class="about-detail">
+                            <p>We believe in the power of organic products to nourish our bodies and protect the environment. Our mission is to provide you with high-quality organic goods that are ethically sourced and free from harmful chemicals. Join us
+                                in our journey towards a greener and healthier world!"</p>
+                            <p>Feel free to customize and expand upon this to better fit your website's message and values. </p>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12 mb-4 order-1 order-lg-2">
+                    <img src="./assets/about/about-img.jpg" alt="about" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about section end -->
 
 
 
