fully complete organic food

--- a/product.html
+++ b/product.html
@@ -106,12 +106,68 @@
         <div class="row align-items-center">
           <div class="col-xl-5 col-lg-6 col-12 mb-5">
             <div class="card-border-0 me-lg-5">
-                <img src="./assets/product-icon/fresh-fruits1.jpg" alt="">
+              <img src="./assets/product-icon/fresh-fruits1.jpg" alt="" />
             </div>
           </div>
           <div class="col-xl-7 col-lg-6 col-12 mb-5">
             <div class="product-content">
-                
+              <h2>Pure lemon juice</h2>
+              <div class="product-details">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                  quibusdam fugiat ab et minus labore fuga iste vitae? Nisi
+                  omnis sequi, hic expedita tempore, pariatur facilis illo est
+                  nesciunt ullam eligendi magni laborum laudantium iusto.
+                </p>
+                <p>
+                  Ipsa fugit nemo odio quo minima nam odit numquam sint totam
+                  eum reiciendis cupiditate sunt similique quibusdam sequi ab
+                  architecto molestias, labore veritatis officia pariatur
+                  molestiae corporis adipisci a?
+                </p>
+                <h4>uses of lemon</h4>
+                <p>
+                  nulla, cum molestias, atque modi et perspiciatis soluta nemo,
+                  repellat corrupti consequuntur iusto quia est! Corrupti
+                  deleniti dolore optio quasi porro quisquam libero voluptas
+                  cupiditate necessitatibus repellat totam,
+                </p>
+                <a href="" class="btn main-btn">buy now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-xl-7 col-lg-6 col-12 mb-5 order-2 order-lg-1">
+            <div class="product-content">
+              <h2>Pure lemon juice</h2>
+              <div class="product-details">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                  quibusdam fugiat ab et minus labore fuga iste vitae? Nisi
+                  omnis sequi, hic expedita tempore, pariatur facilis illo est
+                  nesciunt ullam eligendi magni laborum laudantium iusto.
+                </p>
+                <p>
+                  Ipsa fugit nemo odio quo minima nam odit numquam sint totam
+                  eum reiciendis cupiditate sunt similique quibusdam sequi ab
+                  architecto molestias, labore veritatis officia pariatur
+                  molestiae corporis adipisci a?
+                </p>
+                <h4>uses of lemon</h4>
+                <p>
+                  nulla, cum molestias, atque modi et perspiciatis soluta nemo,
+                  repellat corrupti consequuntur iusto quia est! Corrupti
+                  deleniti dolore optio quasi porro quisquam libero voluptas
+                  cupiditate necessitatibus repellat totam,
+                </p>
+                <a href="" class="btn main-btn">buy now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-5 col-lg-6 col-12 mb-5 order-1 order-lg-2">
+            <div class="card-border-0 me-lg-5">
+              <img src="./assets/product-icon/fresh-fruits2.jpg" alt="" />
             </div>
           </div>
         </div>
