--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                                 <a class="nav-link active" href="about.html">about</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Product</a>
+                                <a class="nav-link" href="product.html">Product</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="gallery.html">gallery</a>
